updated profile image

--- a/CssMySite/index.html
+++ b/CssMySite/index.html
@@ -24,7 +24,7 @@
 
     <div class="middle-container">
         <div class="profile">
-            <img width="200" src="C:\Users\adity\OneDrive\Desktop\WebDev\HTML-Personal site\images\circle_image.png"
+            <img width="200" src="images/profile_img.png"
                 alt="profile">
             <h2>Hello</h2>
             <p class="student">I am a first year undergraduate student in Information Technology at Delhi Technological
